--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "gridstack": "^4.2.3",
     "vue": "^2.6.11",
-    "vue-grid-layout": "^2.3.12"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
